# PiNAS

./: .gitignore  README.md  docker-compose.yml  install.sh  setup.sh
apache2/: 000-default.conf  setup.sh
dashboard/: app.py  auth.py  dashboard.service  pyproject.toml  requirements.txt  run.sh  setup.sh  ui.py  utils.py
dashboard/.streamli/: config.toml
dashboard/.streamlit/: config.toml
dashboard/backend/: pyproject.toml
dashboard/backend/app/: main.py  security.py
dashboard/backend/app/routers/: ai.py  auth.py  backup.py  controls.py  files.py  nas.py  public.py  services.py  shares.py  system.py  terminal.py
dashboard/backend/app/services/: ai.py  backups.py  controls.py  files.py  monitor.py  nas.py  ratelimit.py  shares.py  shell.py  smart.py  system_services.py  tag_queue.py  tags.py  tailscale.py  thumbs.py
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.js
dashboard/frontend/src/: App.jsx  api.js  styles.css  toast.jsx
dashboard/frontend/src/components/: ControlsTab.jsx  FilesTab.jsx  Login.jsx  NasTab.jsx  NetworkTab.jsx  ServicesTab.jsx  Sparkline.jsx  SystemTab.jsx  TerminalTab.jsx  ui.jsx
dashboard/tabs/: controls.py  nas.py  system.py
docs/: design-sharing-and-ai-tagging.md  design-ssd-boot-migration.md
fan/: fan.service  run.sh  setup.sh
pironman/: setup.sh
tailscale/: run.sh  setup.sh  tailscale.service
