[project]
name = "homeserver-dashboard"
version = "1.0.0"
description = "FastAPI backend for the Raspberry Pi homeserver admin dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "psutil",
    "python-pam",
    "six",  # undeclared runtime dependency of python-pam
    "python-multipart",  # form parsing for file uploads
    "humanize",
    "pillow",       # image handling for previews
    "pillow-heif",  # decode HEIC/HEIF (iPhone photos) for browser preview
]
